Update deployment config for Google Cloud Run - Project: pixport-468609

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -159,6 +159,7 @@
     
     <!-- JavaScript with cache busting -->
     <script src="{{ versioned_url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ versioned_url_for('static', filename='js/performance.js') }}"></script>
     {% block extra_js %}{% endblock %}
     
     <!-- Force page refresh on back navigation -->
